
 ** The following window functions now accept a Matlab compatible option
    to select the periodic variant, useful for FFT applications:

      blackmanharris    hann
      blackmannuttall   nuttallwin

 ** The following filter design functions have improved and more consistent
    input parameter validation:

      buttord    cheb2ord
      cheb1ord   ellipord

===============================================================================
signal-1.3.0   Release Date: 2014-01-26   Release Manager: Mike Miller
===============================================================================

 ** The following functions are new:

      digitrevorder   upsamplefill
      primitive       wconv
      ultrwin

 ** Several bugs have been fixed in the following functions:

      ellipord    ifwht
      findpeaks   remez
      fir1        resample
      fwht        schtrig
      grpdelay    zp2sos

 ** Replaced line continuation marker "\" by "..." to avoid deprecated syntax
    warning in Octave 3.8.

 ** The signal package now depends on Octave 3.8 or newer.  The `ellipke'
    function is required, which used to be provided by the specfun package.
    Consequently, the signal package no longer depends on specfun.

===============================================================================
signal-1.2.2   Release Date: 2013-03-25   Release Manager: Mike Miller
===============================================================================

 ** No change release to correct bad file permissions on previous release.

===============================================================================
signal-1.2.1   Release Date: 2013-03-17   Release Manager: Mike Miller
===============================================================================

 ** The following functions are new:

      buttap
      cheb1ap
      cheb2ap
      ellipap
      findpeaks
      fwht
      ifwht

 ** Improved Matlab compatibility for the following window functions:

      barthannwin