@@ -13,6 +13,8 @@ Summary of important user-visible changes for signal 1.3.1:
       buttord    cheb2ord
       cheb1ord   ellipord
 
+ ** The package is no longer dependent on the general package.
+
 ===============================================================================
 signal-1.3.0   Release Date: 2014-01-26   Release Manager: Mike Miller
 ===============================================================================
